@@ -22,12 +22,6 @@
                 <td align="left">
     <a href="http://jakarta.apache.org"><img src="images/jakarta-logo.gif" border="0"/></a>
     </td>
-    <td align="center">
-    <a href="http://www.sdmagazine.com"><img src="images/sdm_productivity_award.gif" border="0" height="75" width="135"/></a>
-    </td>
-    <td align="center">
-    <a href="http://www.javaworld.com"><img src="images/jw_ec_logo_winner2002.gif" border="0" height="85" width="230"/></a>
-    </td>
     <td align="right">
               <a href="http://jakarta.apache.org/ant/"><img src="./images/ant_logo_large.gif" alt="Apache Ant" border="0"/></a>
         </td>
@@ -565,6 +559,20 @@
       valign="top" align="left">
     <font color="#000000" size="-1" face="arial,helvetica,sanserif">
           10 July 2002
+        </font>
+  </td>
+      </tr>
+                  <tr>
+                  <td bgcolor="#a0ddf0" colspan="" rowspan="" 
+      valign="top" align="left">
+    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+          1.5.1
+        </font>
+  </td>
+                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
+      valign="top" align="left">
+    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+          3 October 2002
         </font>
   </td>
       </tr>
